feat: Enhance Diagram and Node classes for UML processing
- Updated Diagram class to convert UML class diagrams into knowledge graphs, handling entities and relationships.
- Enhanced Node class to store attributes and methods, with appropriate getters and setters.
- Implemented methods for creating entity and relationship nodes in the Diagram class.
- Added unit tests for Diagram and Node classes to ensure functionality and correctness.
- Introduced Parser class for parsing PUML strings and validating input.
- Created comprehensive tests for Parser, including validation scenarios and edge cases.
- Added LLMProvider tests to verify behavior with mock responses and real API calls.
- Implemented FCA4JAdapter tests to ensure concept generation from nodes.
- Developed tests for UMLEnhancer to validate the execution flow and integration with other components.
- Added PlantUMLReader tests for reading PUML files and handling various content scenarios.
- Created Result class tests to validate success and failure scenarios with generic types.