@@ -7,22 +7,26 @@ import net.sourceforge.plantuml.SourceStringReader;
 public class Parser {
 
     private String puml;
+
     public Parser() {
     }
+
     public void setPuml(String puml) {
         this.puml = puml;
     }
-    public boolean validate(){
 
-        return false;}
+    public boolean validate() {
+
+        return false;
+    }
+
     public Diagram parse() {
         if (!this.validate()) {
             return null;
         }
-        //Parse le PUML pour en faire un diagramme
+        // Parse le PUML pour en faire un diagramme
         SourceStringReader reader = new SourceStringReader(puml);
-        return new Diagram(reader.getBlocks().getFirst().getDiagram());}
+        return new Diagram(reader.getBlocks().get(0).getDiagram());
+    }
 
-	}
-
-
+}
